Fix D-Pad/keyboard Up/Down skipping rows; bundle a newer OpenJDK
Up/Down navigation: GTK's generic child_focus() directional search is
unreliable across a tall stack of same-sized buttons (version picker,
instance grid, accounts, settings) - it unpredictably skipped several
rows at once instead of moving one at a time. The exact same class of
bug gamepad-2048 hit for its board-size row. Replace it with
step_focus(): move to the literal next/previous sibling of whatever's
currently focused. Every screen here lays its controls out as flat
siblings in a single vertical Box, so this needs no per-screen
knowledge of which list is active, and naturally doesn't wrap at the
ends (can_focus gates non-button siblings out).

OpenJDK version: current Minecraft releases pass JVM arguments
(--sun-misc-unsafe-memory-access=allow, part of the sun.misc.Unsafe
deprecation work) that Java 21 doesn't recognize at all and refuses to
start with - confirmed live against Minecraft 26.2. Bundle
openjdk-25-jre-headless (current LTS) instead, and update launch.rs's
staged-JRE path and docs to match.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>